--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -1,121 +1,57 @@
-// This import applies a global reset to any page that imports this stylesheet.
-@import "blueprint/reset";
+@import "susy";
 
-// To configure blueprint, edit the partials/base.sass file.
-@import "partials/base";
-
-// Import all the default blueprint modules so that we can access their mixins.
-@import "blueprint";
-
-// Combine the partials into a single screen stylesheet.
-@import "partials/page";
-@import "partials/form";
+$total-columns  : 10;             // a 12-column grid
+$column-width   : 3em;            // each column is 4em wide
+$gutter-width   : 1em;            // 1em gutters between columns
+$grid-padding   : $gutter-width;  // grid-padding equal to gutters
+$base-font-size : 18px;
 
 body {
   #container {
     @include container;
-    //background: url('/images/grid.png');
-  }
-  #header, #footer {
-    @include column($blueprint-grid-columns);
-    .inner_content {
-      $inner_content_columns: $blueprint-grid-columns - 2;
-      @include prepend(1);
-      @include column($inner_content_columns);
-      @include append(1);
-    }
-  }
-  #content {
-    $content-columns: $blueprint-grid-columns - 2;
-    @include prepend(1);
-    @include column($content-columns);
-    @include append(1);
+    // @include susy-grid-background;
 
-    .separator {
-      margin-top: 3em;
-      margin-bottom: 2em;
-      @include column($content-columns);
-      padding: 0;
-      border: none;
-      border-top: medium double #ccc;
-      color: #ccc;
-      text-align: center;
+    &>nav, &>#content, &>footer {
+      @include span-columns(10,10);
+      clear: both;
+      overflow: auto;
     }
-    .separator:after {
-      content: "§";
-      display: inline-block;
-      position: relative;
-      top: -0.925em;
-      font-size: 1.5em;
-      padding: 0 0.25em;
-      background: url(/images/creampaper.png);
-    }
-  }
-
-  #content > .blog:first-of-type {
-    margin-top: 0;
-  }
-}
-
-body.bp {
-  h1, h2, h3, h4, h5, h6 {
-    font-family: "adelle-1","adelle-2";
   }
 }
 
 body {
   background: url(/images/creampaper.png);
+  background-color: #E3E3E1;
+
+  font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
+  font-size: $base-font-size;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "adelle-1","adelle-2";
+  }
 
   iframe {
     margin-bottom: 1em;
   }
 
-  #header {
-    padding: 4em 0 2em 0;
+  nav {
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      li {
+        display: inline;
+        margin-right: 2em;
+      }
+    }
+  }
+
+
+  header {
+    margin-bottom: 2em;
     h1 {
-      margin-bottom: 10px;
-    }
-    p.details {
-      font-weight: bold;
-      color: #999;
-      margin-bottom: 0;
-      font-size: 14px;
-      text-transform: uppercase;
-    }
-  }
-
-  #footer {
-    background-color: #f4f4f4;
-    font-size: 18px;
-    overflow: auto;
-    margin-top: 2em;
-    padding: 1em 0;
-    overflow: auto;
-    p, h4 {
-      margin-bottom: 0;
-    }
-  }
-
-  a {
-    text-decoration: none !important;
-    xfont-style: italic;
-    font-weight: 600;
-  }
-
-  a:hover {
-  }
-
-  &.blog {
-    padding-top: 4em;
-
-    .site-information {
-      margin-bottom: 1em;
-    }
-  }
-
-  #content {
-    h1 {
-      margin-bottom: 10px;
+      font-size: 3em;
+      margin-bottom: 0.1em;
     }
 
     .details {
@@ -124,13 +60,72 @@ body {
       margin-bottom: 0;
       font-size: 14px;
       text-transform: uppercase;
-      padding-bottom: 2.6em;
+    }
+  }
+
+  .separator {
+    margin: 4em 0 2em 0;
+    padding: 0;
+    border: none;
+    border-top: medium double #ccc;
+    color: #ccc;
+    text-align: center;
+  }
+  .separator:after {
+    content: "§";
+    display: inline-block;
+    position: relative;
+    top: -0.925em;
+    font-size: 1.5em;
+    padding: 0 0.25em;
+    background: url(/images/creampaper.png);
+    background-color: #E3E3E1;
+  }
+
+  #content {
+    img {
+      max-width: 100%;
     }
 
     .footnotes {
-      border-top: 1px solid #eee;
-      padding-top: 1em;
+      margin-top: 4em;
+      padding: 1em;
+      background-color: lighten(#E3E3E1, 7%);
       font-size: 90%;
+
+      ol, p {
+        margin: 0;
+      }
+      li {
+        margin-bottom: 1em;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
     }
+
+    pre.code {
+      padding: 1em;
+      color: white;
+      background-color: #222;
+      border: 0.3em solid #999;
+      overflow: scroll;
+    }
+  }
+
+  #content > .blog:first-of-type {
+    margin-top: 0;
+  }
+
+  footer {
+    padding-bottom: 2em;
+    p {
+      margin: 0;
+    }
+  }
+
+  a {
+    text-decoration: none !important;
+    font-weight: 600;
   }
 }
