--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -25,40 +25,45 @@ body #container > nav, body #container > #content, body #container > footer {
   overflow: auto;
 }
 
-/* line 28, sass/screen.scss */
+/* line 22, sass/screen.scss */
+body, .separator:after {
+  background-color: white;
+}
+
+/* line 29, sass/screen.scss */
 body {
   font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
   font-size: 18px;
 }
-/* line 32, sass/screen.scss */
+/* line 33, sass/screen.scss */
 body h1, body h2, body h3, body h4, body h5, body h6 {
   font-family: "adelle-1","adelle-2";
 }
-/* line 36, sass/screen.scss */
+/* line 37, sass/screen.scss */
 body iframe {
   margin-bottom: 1em;
 }
-/* line 41, sass/screen.scss */
+/* line 42, sass/screen.scss */
 body nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 45, sass/screen.scss */
+/* line 46, sass/screen.scss */
 body nav ul li {
   display: inline;
   margin-right: 2em;
 }
-/* line 53, sass/screen.scss */
+/* line 54, sass/screen.scss */
 body header {
   margin-bottom: 2em;
 }
-/* line 55, sass/screen.scss */
+/* line 56, sass/screen.scss */
 body header h1 {
   font-size: 3em;
   margin-bottom: 0.1em;
 }
-/* line 60, sass/screen.scss */
+/* line 61, sass/screen.scss */
 body header .details {
   font-weight: bold;
   color: #999;
@@ -66,7 +71,7 @@ body header .details {
   font-size: 14px;
   text-transform: uppercase;
 }
-/* line 69, sass/screen.scss */
+/* line 70, sass/screen.scss */
 body .separator {
   margin: 4em 0 2em 0;
   padding: 0;
@@ -75,7 +80,7 @@ body .separator {
   color: #ccc;
   text-align: center;
 }
-/* line 77, sass/screen.scss */
+/* line 78, sass/screen.scss */
 body .separator:after {
   content: "§";
   display: inline-block;
@@ -84,30 +89,30 @@ body .separator:after {
   font-size: 1.5em;
   padding: 0 0.25em;
 }
-/* line 87, sass/screen.scss */
+/* line 88, sass/screen.scss */
 body #content img {
   max-width: 100%;
 }
-/* line 91, sass/screen.scss */
+/* line 92, sass/screen.scss */
 body #content .footnotes {
   margin-top: 4em;
   padding: 1em;
   background-color: #f4f4f3;
   font-size: 90%;
 }
-/* line 97, sass/screen.scss */
+/* line 98, sass/screen.scss */
 body #content .footnotes ol, body #content .footnotes p {
   margin: 0;
 }
-/* line 100, sass/screen.scss */
+/* line 101, sass/screen.scss */
 body #content .footnotes li {
   margin-bottom: 1em;
 }
-/* line 102, sass/screen.scss */
+/* line 103, sass/screen.scss */
 body #content .footnotes li:last-child {
   margin-bottom: 0;
 }
-/* line 108, sass/screen.scss */
+/* line 109, sass/screen.scss */
 body #content pre > code {
   margin: 1em 0;
   display: block;
@@ -117,28 +122,31 @@ body #content pre > code {
   border: 0.3em solid #999999;
   overflow: scroll;
 }
-/* line 118, sass/screen.scss */
-body #content blockquote {
-  font-style: italic;
-}
-/* line 122, sass/screen.scss */
+/* line 119, sass/screen.scss */
 body #content tt, body #content p > code, body #content li > code {
   background-color: #ddd;
   padding: 0 0.3em;
 }
-/* line 128, sass/screen.scss */
+/* line 124, sass/screen.scss */
+body #content blockquote {
+  font-style: italic;
+  margin-left: 0;
+  padding-left: 2em;
+  border-left: 0.3em solid #dddddd;
+}
+/* line 132, sass/screen.scss */
 body #content > .blog:first-of-type {
   margin-top: 0;
 }
-/* line 132, sass/screen.scss */
+/* line 136, sass/screen.scss */
 body footer {
   padding-bottom: 2em;
 }
-/* line 134, sass/screen.scss */
+/* line 138, sass/screen.scss */
 body footer p {
   margin: 0;
 }
-/* line 139, sass/screen.scss */
+/* line 143, sass/screen.scss */
 body a {
   text-decoration: none !important;
   font-weight: 600;
