--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -1,4 +1,5 @@
 @import "susy";
+@import "code";
 
 $total-columns  : 10;             // a 12-column grid
 $column-width   : 3em;            // each column is 4em wide
@@ -106,10 +107,10 @@ body {
       }
     }
 
-    pre > code {
+    .code {
       margin: 1em 0;
       display: block;
-      padding: 1em;
+      padding: 0 1em;
       color: white;
       background-color: #222;
       border: 0.3em solid #999;
